--- a/packages/colonizers/package.json
+++ b/packages/colonizers/package.json
@@ -9,17 +9,16 @@
   "repository": "git://github.com/colonizers/colonizers",
   "main": "server/index.js",
   "scripts": {
+    "dev": "concurrently --kill-others \"yarn start\" \"webpack-dev-server --open\"",
     "start": "node server/index.js",
     "test": "lab --verbose --lint"
   },
   "dependencies": {
     "babel-core": "^6.3.17",
     "babel-preset-es2015": "^6.3.13",
-    "babelify": "^7.3.0",
     "bcryptjs": "^2.4.3",
     "boom": "^5.2.0",
     "bootstrap": "3.3.5",
-    "brfs": "^1.4.1",
     "component-emitter": "^1.2.0",
     "good": "^7.3.0",
     "good-console": "^6.4.1",
@@ -27,7 +26,6 @@
     "hapi": "^16.7.0",
     "hapi-auth-basic": "^4.2.0",
     "hapi-auth-cookie": "^7.1.0",
-    "hapi-browserify": "^0.0.4",
     "hapi-context-credentials": "^2.0.0",
     "hapi-io": "^0.2.1",
     "hoek": "^4.2.1",
@@ -48,11 +46,16 @@
     "wascally": "^0.2.7"
   },
   "devDependencies": {
+    "concurrently": "^4.1.1",
     "gulp": "^3.9.0",
     "gulp-concat": "^2.6.0",
     "gulp-insert": "^0.5.0",
     "gulp-less": "^3.0.3",
     "gulp-replace": "^0.5.4",
-    "jasny-bootstrap": "git://github.com/jasny/bootstrap#v3.1.3"
+    "jasny-bootstrap": "git://github.com/jasny/bootstrap#v3.1.3",
+    "raw-loader": "^3.1.0",
+    "webpack": "^4.39.1",
+    "webpack-cli": "^3.3.6",
+    "webpack-dev-server": "^3.7.2"
   }
 }
